--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Portfolio Chatbot-agustin"
+      content="Portfolio Chatbot-Agustin"
     />
     <link rel="manifest" href="./manifest.json" />
     <title>Agustin Mansilla</title>
@@ -108,6 +108,6 @@
       })([]);
     </script>
     <script src="./static/js/2.ea2ed6a1.chunk.js"></script>
-    <script src="./static/js/main.d5f03e6c.chunk.js"></script>
+    <script src="./static/js/main.aceefc07.chunk.js"></script>
   </body>
 </html>
