--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,19 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Chatbot portfolio-agustin"
-    />
+<title>Agustin Mansilla - Portfolio</title>
+<meta name="title" content="Agustin Mansilla - Portfolio">
+<meta name="description" content="Portfolio,chatbot,react...">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://metatags.io/">
+<meta property="og:title" content="Agustin Mansilla - Portfolio">
+<meta property="og:description" content="Portfolio,chatbot,react...">
+<meta property="og:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://metatags.io/">
+<meta property="twitter:title" content="Agustin Mansilla - Portfolio">
+<meta property="twitter:description" content="Portfolio,chatbot,react...">
+<meta property="twitter:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   
     <title>Agustin Mansilla </title>
